    * Fix topic creator highlighting beyond the first page when topic creator
      labeling is disabled
    * Tracked topics are now integrated into GameFOX
    * Disable all tag-related preferences by default
    * Numerous performance improvements
    * New CSS: Capitalized Message Links
    * Add board links above QuickPost on message lists
    * Drop Firefox 1.5 support

2008-12-26:
    * version 0.6.9
    * More configurable HTML button display options
    * Add keyboard shortcuts to HTML buttons
    * Label current logged-in account in the account switcher
    * Allow highlighting of the topic creator with the user lists feature

2008-12-23:
    * version 0.6.8
    * Fix manual topic pagination
    * Cache favorite boards when on board index page; show in context menu,
      sidebar, and GameFAQs header
    * Scroll to appropriate location when filtering/unfiltering
    * Improved Ricapar Classic CSS; now compatible with Firefox 3.1
    * Workaround Firefox 3 bug that breaks QuickPost and other features when
      third-party cookies are blocked
    * Restore QuickPost reset button with additional functionality
    * Remove <style> elements when ad servers are blocked
    * Fix quoting issue that occurs when certain extensions (e.g.,
      Session Manager) are installed
    * Add HTML buttons to posting
    * Commas now used in place of semicolons as the delimiter for signature
      fields
    * Add link to message headers to quote
    * Add options to remove sections from the GameFOX sidebar
    * The user groups context menu option can now be used on the topic list,
      anywhere on the message list, and in archived topics
    * Improved removal of nested quotes
    * Full key combination is shown in tooltip for QuickPost buttons
    * Excessive whitespace after quotes is now automatically removed
    * User interface for style pane simplified - deletion of imported
      stylesheets now handled in the context menu