@@ -31,8 +31,8 @@
     <script type="application/x-javascript"
       src="chrome://gamefox/content/options/signatures.js"/>
 
-    <stringbundleset id="signatures-strbundles">
-      <stringbundle id="signatures-strings"
+    <stringbundleset id="strbundles">
+      <stringbundle id="strings"
         src="chrome://gamefox/locale/options/signatures.properties"/>
     </stringbundleset>
 
@@ -95,8 +95,9 @@
                 class="indent"/>
               <hbox pack="end">
                 <button id="gamefox-css-grab-sig" label="&grab.button;"
-                  icon="refresh"
-                  oncommand="GFsigOptions.importSig();"/>
+                  icon="refresh" oncommand="GFsigOptions.importSig();"/>
+                <button id="gamefox-css-save-sig" label="&save.button;"
+                  icon="save" oncommand="GFsigOptions.exportSig();"/>
               </hbox>
             </groupbox>
           </notificationbox>
