@@ -1,3 +1,8 @@
 importNotLoggedIn=Your signature could not be imported. Check that you are logged in to GameFAQs.
 importOld=Your signature could not be imported. Maybe you have one of those really old signatures that displays bold and italics on the profile page?
 importSuccess=Your signature has been imported into GameFOX.
+
+exportNotLoggedIn=Your signature could not be exported. Check that you are logged in to GameFAQs.
+exportNoUserId=Your signature could not be exported. (no userid)
+exportUnexpectedResponse=Your signature could not be exported. (unexpected response)
+exportSuccess=Your signature has been exported to GameFAQs.
